--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
+*{
+  margin: 0;
+  border: 0;
+  padding: 0;
+}
+
+.navbar-container{
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding: 15px;
+  width: 100%;
+  box-shadow: 1px 0 3px #777;
+  background-color: white;
+}
+
+.nav{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: auto;
+}
+
+
+
+a{
+  text-align: center;
+  text-decoration: none;
+  border-radius: 25px;
+  padding: 5px 15px;
+  
+}
+a:hover{
+  box-shadow: 0 1px 5px #aaa;
+  color: white;
+  background: black;
+  cursor: pointer;
+}
+
+
+
+.section{
+  padding: 45px 0;
+  margin: 0 auto;
+}
+
+h1{
+  font-size: 25px;
+  margin: 50px auto;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h2{
+  font-size: 15px;
+  margin: 50px auto;
+  text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.section-body{
+  padding: 0 15px;
+  font-size: 12px;
 }
